<resources>
    <string name="send_email">Manda Email</string>
    <string name="no_email_client">La iha email kliente nebe instala.</string>
    <string name="no_email">This user has no email business_address</string>
    <string name="no_phone_number">Uzuariu ida ne la iha numeru telemovel</string>
    <string name="msg_request_time_out">Request timeout</string>
    <string name="msg_network_not_available">Redi la disponivel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sign_in">Log in</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="sign_up">Rejistu</string>
    <string name="continue_">Kontinua</string>
    <string name="Edit_Profile">Edit Profile</string>
    <string name="register_">Rejistu</string>
    <string name="email">Email</string>
    <string name="email_address">E-mail address</string>
    <string name="hint_email_address">E-mail address*</string>
    <string name="phone_number">Numeru Telemovel</string>
    <string name="zipcode">Zipcode</string>
    <string name="gender">Sexo</string>
    <string name="birthday">Birthday</string>
    <string name="hint_phone_number">Telemovel*</string>
    <string name="password">Password</string>
    <string name="password_require">Password*</string>
    <string name="retype_password">Repete fali password</string>
    <string name="forget_password">Haluha password?</string>
    <string name="no_account_yet">Seidauk iha account? Kria agora</string>
    <string name="full_name">Naran kompletu</string>
    <string name="hint_full_name">Naran kompletu*</string>
    <string name="create_account">Kria account</string>
    <string name="start_now">Komesa agora</string>
    <string name="already_a_member">Rejistu ona? LOGIN AGORA</string>
    <string name="chose_category">Hili kategoria</string>
    <string name="my_favorites">Hau nia favoritu</string>
    <string name="transport_deliveries">Transporte &amp; Deliveries </string>
    <string name="food_beverages">Hahan &amp; Bebidas</string>
    <string name="labor">Labor (jobs)</string>
    <string name="travel_hotel">Hotels &amp; Traveling</string>
    <string name="shopping">Shopping, Beauty &amp; Health</string>
    <string name="other_deals">Other nearby deals</string>
    <string name="other_deal">Other nearby deal</string>
    <string name="all_deals">All other deals</string>
    <string name="all_deal">All deals</string>
    <string name="description_food">Find a deal at a nearby cafe, bar or restaurant...</string>
    <string name="description_hotel">Find a deal to booking hotel or traveling many place...</string>
    <string name="description_shopping">Find thousand deal to have a best choose...</string>
    <string name="description_beauty">Find a deal at a nearby spa, hospital, relax,...</string>
    <string name="description_orther">Find a orther deal at a nearby...</string>
    <string name="description_labor">Find a temporary work in many place nearby...</string>
    <string name="cart">Karosa</string>
    <string name="Buy">Sosa</string>
    <string name="Kontinua">Kontinua</string>
    <string name="Hot">"Hot "</string>
    <string name="New">Foun</string>
    <string name="Feature">"Feature "</string>
    <string name="search">Peskiza</string>
    <string name="iwanaride">WFOUR</string>
    <string name="iwanadelivery">Delivery</string>
    <string name="work">Servisu</string>
    <string name="iwanachat">Chat</string>
    <string name="profile">Profile</string>
    <string name="my_deals">My deals</string>
    <string name="deal_manager">Deal Manager</string>
    <string name="iwanapay">Selu</string>
    <string name="news_and_events">Notisia &amp; Eventu</string>
    <string name="iwanabiz">Biz</string>
    <string name="share">Share</string>
    <string name="help">Ajuda</string>
    <string name="settings">Konfigurasaun</string>
    <string name="about_us">Konaba Ami</string>
    <string name="me">Hau</string>
    <string name="log_out">Log out</string>
    <string name="notification">Notifikasaun</string>
    <string name="advance_search">Peskiza tuir mai</string>
    <string name="keyword">Keywords</string>
    <string name="value_km">%1$s Km</string>
    <string name="value_meter">%1$s m</string>
    <string name="value_best_deals">Show %1$s best deals</string>
    <string name="available_now">Disponivel agora</string>
    <string name="remember_me">Fo hanoin hau</string>
    <string name="dollar_value">$%1$s</string>
    <string name="negative_dollar_value">-$%1$s</string>
    <string name="sort_by_rating">Sort by rating</string>
    <string name="sort_by_distance">Sort by distance</string>
    <string name="view_on_map">Hare iha mapa</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_price">Sort by price</string>
    <string name="i_am_available_for_driving">I\'m available for driving</string>
    <string name="duration_buying">Durasaun da kompra</string>
    <string name="my_trip">My trips</string>
    <string name="iwanaride_deals">iwanaride deals</string>
    <string name="deal">Deal</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="no_address_found">Sorry, no business_address found</string>
    <string name="address_found">fatin hetan ona</string>
    <string name="address_">Hela fatin</string>
    <string name="service_not_available">No geocoder available</string>
    <string name="msg_no_network">Network is not available</string>
    <string name="msg_can_not_get_email">Failed to login. Can not get your email business_address</string>
    <string name="msg_have_some_errors">Have some errors, please try again</string>
    <string-array name="months">

        <item>01</item>

        <item>02</item>

        <item>03</item>

        <item>04</item>

        <item>05</item>

        <item>06</item>

        <item>07</item>

        <item>08</item>

        <item>09</item>

        <item>10</item>

        <item>11</item>

        <item>12</item>

    </string-array>
    <string name="msg_remind_user_grants_permissions">Application can not work correctly if it\'s not enough permissions</string>
    <string name="msg_remind_user_turn_on_location">Application can not work correctly if you don\'t turn on Google\'s location</string>
    <string name="msg_remind_user_grant_location">Passengers will not find you if you don\'t grant location permission.\nPlease grant location or you will not be available for searching</string>
    <string name="no_thank">No</string>
    <string name="allow">Allow</string>
    <string name="msg_name_is_required">Naran tenke prense</string>
    <string name="msg_email_is_required">Email la validu</string>
    <string name="msg_phone_is_required">Numeru telemovel tenke prense</string>
    <string name="msg_zipcode_is_required">Zipcode is required</string>
    <string name="msg_image_is_required">Imajen presiza</string>
    <string name="msg_birthday_is_required">Birthday is required</string>
    <string name="msg_gneder_is_required">Sexo tenke prense</string>
    <string name="msg_password_is_required">Password includes at least 8 characters containing at least 1 number and no special characters</string>
    <string name="msg_password_is_not_match">Password la hanesan</string>
    <string name="from">Husi</string>
    <string name="from_value">Husi: %1$s</string>
    <string name="to">Ba</string>
    <string name="to_value">Ba: %1$s</string>
    <string name="approximate_price_value">Presu aprosimadu: $%1$s</string>
    <string name="passengers_value">Pasageiru: %1$s</string>
    <string name="turn_on">Turn on</string>
    <string name="yes">Yes</string>
    <string name="ok">Ok</string>
    <string name="all">All</string>
    <string name="taxi">Taxi</string>
    <string name="taxi_delivery">Taxi-Delivery</string>
    <string name="vip">VIP</string>
    <string name="vip_delivery">VIP-Delivery</string>
    <string name="lifts">Lifts</string>
    <string name="lift_delivery">Lifts-Delivery</string>
    <string name="motorbike">Moto</string>
    <string name="motor_delivery">Motor-Delivery</string>
    <string name="delivery">Selu ona</string>
    <string name="more_info">Info seluk tan</string>
    <string name="settings_notification">Permite Notifikasaun</string>
    <string name="settings_my_favourite">hau nia favoritu</string>
    <string name="settings_transport_deliveries">

-<![CDATA[Transport & Deliveries]]>
</string>
    <string name="settings_food_beverages">

-<![CDATA[Foods & Beverages]]>
</string>
    <string name="settings_labor">Servisu (jobs)</string>
    <string name="settings_travelling">Viajen</string>
    <string name="settings_shopping">Kompra</string>
    <string name="settings_other_near_by_deal">Others nearby deals</string>
    <string name="iwana_pay_buy_credit">Sosa kreditu</string>
    <string name="iwana_pay_redeem">Redeem</string>
    <string name="iwana_pay_tranfers">Transferensia</string>
    <string name="iwana_pay_histories">History</string>
    <string name="business_address">Enderesu</string>
    <string name="hint_business_address">Enderesu*</string>
    <string name="edit_image">Edit</string>
    <string name="title_my_account">Canning vate WA 6155, AU</string>
    <string name="button_reviews">View Reviews</string>
    <string name="general">Geral</string>
    <string name="bussiness_name">Naran empreza</string>
    <string name="hint_bussiness_name">Naran empreza*</string>
    <string name="info_car">Informasaun Kareta</string>
    <string name="car_make">Car make</string>
    <string name="hint_car_make">Car make*</string>
    <string name="model">Modelu</string>
    <string name="hint_model">Modelu*</string>
    <string name="year">Tinan</string>
    <string name="hint_year">Tinan*</string>
    <string name="petrol">Petrol</string>
    <string name="gaz">Gaz</string>
    <string name="gaz_online">Gazolina</string>
    <string name="yearly_insurance">Yearly insurance</string>
    <string name="submit">Submit</string>
    <string name="payment">Pagamentu</string>
    <string name="dollar_symbol">$</string>
    <string name="call">Phone Call</string>
    <string name="voice_call">VoiP call</string>
    <string name="add_to_contact">Add to contacts</string>
    <string name="faq">FAQs</string>
    <string name="forgot_message_description">Favor hatama ita-nia email no \n ami sei manda link hodi hafoun ita-nia password</string>
    <string name="activate">Ativa</string>
    <string name="deactivate">Deactivate</string>
    <string name="button_cancel">Kansela</string>
    <string name="update">Update</string>
    <string name="renew_deal">Renew Deal</string>
    <string name="agreed_price">Agreed price</string>
    <string name="other_price">Presu seluk tan</string>
    <string name="msg_ask_user_chooses_price">Please let us know your decision</string>
    <string name="cancel_deal">Kansela deal</string>
    <string name="track_deal">Track deal</string>
    <string name="picked_up">Picked up</string>
    <string name="female">Feto</string>
    <string name="male">Mane</string>
    <string name="choose_gender">Hili sexo</string>
    <string name="buyer">Komprador</string>
    <string name="manager_and_track_bought_deals">Manager and track bought deals.</string>
    <string name="seller">vendedor</string>
    <string name="buy_deals">Buy Deals</string>
    <string name="sell_deals">Sell Deals</string>
    <string name="manager_upload_your_items_and_track_your_store">Manager, upload your items and track your store..</string>
    <string name="home_navbar">Home</string>
    <string name="wishlist_navbar">Wishlist</string>
    <string name="chats_navbar">Chats</string>
    <string name="cart_navbar">Cart</string>
    <string name="akun_navbar">Profile</string>
</resources>