<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/home_menu"
        android:title="@string/home_navbar"
        android:iconTint="@color/text_color_price"
        android:icon="@drawable/home"
        app:showAsAction="withText" />

    <item
        android:id="@+id/wishlist_menu"
        android:title="@string/wishlist_navbar"
        android:iconTint="@color/text_color_price"
        android:icon="@drawable/ic_heart_favorite"
        app:showAsAction="withText"/>

    <item
        android:id="@+id/chats_menu"
        android:title="@string/chats_navbar"
        android:iconTint="@color/text_color_price"
        android:icon="@drawable/chat_nav"
        app:showAsAction="withText"/>

    <item
        android:id="@+id/cart_menu"
        android:title="@string/cart_navbar"
        android:iconTint="@color/text_color_price"
        android:icon="@drawable/ic_cart_red"
        app:showAsAction="withText"/>

    <item
        android:id="@+id/akun_menu"
        android:title="@string/akun_navbar"
        android:iconTint="@color/text_color_price"
        android:icon="@drawable/ic_profile_nav"
        app:showAsAction="withText"/>

</menu>