<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="@dimen/min_width_dialog"
    android:background="@color/white"
    android:orientation="vertical">

    <com.wfour.onlinestoreapp.widgets.textview.TextViewBold
        android:layout_marginTop="@dimen/dimen_2x"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dimen_2x"
        android:text="@string/forget_password"
        android:textAllCaps="true"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/text_size_xlarge" />

    <com.wfour.onlinestoreapp.widgets.textview.TextViewRegular
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="@dimen/dimen_2x"
        android:text="@string/forgot_message_description"
        android:textSize="@dimen/text_size_normal" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:theme="@style/TextInputLayout"
        android:layout_margin="@dimen/dimen_2x"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="@color/textColorSecondary"
            android:inputType="textEmailAddress"
            android:textColor="@color/textColorSecondary"
            android:textSize="@dimen/text_size_normal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.wfour.onlinestoreapp.widgets.textview.TextViewRegular
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/tv_error"
        android:textColor="@color/red"
        android:visibility="gone"
        android:layout_marginBottom="@dimen/dimen_2x"
        android:textSize="@dimen/text_size_normal" />

    <com.wfour.onlinestoreapp.widgets.textview.TextViewBold
        android:id="@+id/tv_submit"
        style="@style/Button.Primary"
        android:layout_gravity="center_horizontal"
        android:layout_width="@dimen/width_button_submit"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_3x"
        android:layout_marginTop="@dimen/dimen_3x"
        android:text="@string/submit" />

</LinearLayout>